--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,9 @@ input.send {
 	width: 300px;
 	height: 40px;
 }
-
+.control-group {
+	
+}
 
 /* Left Sidebar
 -----------------------------------------------------------------------------*/
